force-app/main/default/objects/HAM_Trivia_Options__c/HAM_Trivia_Options__c.object-meta.xml
<CustomObject>
    <label>Trivia Options</label>
    <nameField>
        <displayFormat>Option-{0}</displayFormat>
        <label>Trivia Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trivia Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>