force-app/main/default/objects/HAM_Trivia_Options__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>For ordering options</inlineHelpText>
    <label>Display Order</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>