force-app/main/default/objects/HAM_Trivia_Options__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Correct option is checked</inlineHelpText>
    <label>Is Correct?</label>
    <type>Checkbox</type>
</CustomField>