force-app/main/default/objects/HAM_Trivia_Options__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <inlineHelpText>Max 255 characters</inlineHelpText>
    <label>Option</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>