force-app/main/default/objects/HAM_Trivia_Options__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>HAM_Trivia__c</referenceTo>
    <relationshipLabel>Trivia Options</relationshipLabel>
    <relationshipName>Trivia_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>