force-app/main/default/objects/HAM_Trivia_Options__c/listViews/All_options.listView-meta.xml
<ListView>
    <fullName>All_options</fullName>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Is_Correct__c</columns>
    <columns>Option__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All options</label>
</ListView>